# ncert-tui

./: README.md  ncert_browser.py  ncert_fetcher.py  pyproject.toml  requirements.txt  run.sh
