[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncert-fetcher"
version = "1.0.0"
description = "Terminal-based utility to search and download NCERT textbooks"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "NCERT Fetcher" }
]
keywords = ["ncert", "textbook", "education", "pdf", "downloader"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Internet :: Download Managers",
]
dependencies = [
    "rich>=13.0.0",
    "requests>=2.28.0",
    "pypdf>=3.0.0",
    "questionary>=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
ncert = "ncert_fetcher:main"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
